--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -2526,27 +2526,6 @@ input.i-modified,
 	text-align: left /* Force default alignment */
 }
 
-/* ie6compatnode is hidden from non ie6 browsers, for ie6 
- * uses weird hack to sink all events properly 
- */
-.i-tree-node-ie6compatnode {
-	display: none;
-}
-
-* html .i-tree-node-ie6compatnode {
-	display: inline;
-	float:left;
-	background: orange;
-	margin:0;
-	width:14px;
-	height:10px;
-	padding:1px;
-	filter: Alpha(opacity=0);
-}
-* html .i-tree-node {
-	clear: both;
-}
-
 .i-tree-node {
 	background: transparent url(tree/img/collapsed.png) no-repeat 2px 1px;
 }
@@ -2573,6 +2552,30 @@ input.i-modified,
 }
 .i-tree-node-children {
 	padding-left: 16px;
+}
+
+
+/* ie6compatnode is hidden from non ie6 browsers, for ie6 
+ * uses weird hack to sink all events properly 
+ */
+.i-tree-node-ie6compatnode {
+	display: none;
+}
+
+/* IMPORTANT keep the offsetWidth of this element the same as the margin-left of i-tree-node-caption */
+.i-ie6 .i-tree-node-ie6compatnode {
+	display: inline;
+	float: left;
+	background: orange;
+	margin: 0;
+	width: 14px;
+	height: 10px;
+	padding: 1px;
+	filter: Alpha(opacity=0);
+}
+.i-ie6 .i-tree-node,
+.i-ie6 .i-tree-node-children {
+	clear: left;
 }
 
 /* ./WebContent/ITMILL/themes/default/window/window.css */
