css changes to fix FF2 and opera issues (#2652,  #2749)
svn changeset:7080 branch:6.0

--- a/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
+++ b/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
@@ -33,7 +33,13 @@
 	padding-top:0px;
 }
 
-.i-gridlayout {
+/* Ensure that resizing gridlayout works in IE */
+* html .i-gridlayout {
 	overflow:hidden;
 }
+
+*+html .i-gridlayout {
+	overflow:hidden;
+}
+
 
