(merged from 5.4) Implements "input prompt" for ComboBox and TextField. Also includes Sampler samples. Fixes #1455
svn changeset:7337 branch:6.0

--- a/WebContent/ITMILL/themes/default/select/select.css
+++ b/WebContent/ITMILL/themes/default/select/select.css
@@ -102,7 +102,11 @@
 	outline: 5px auto -webkit-focus-ring-color;
 	outline-offset: -4px;
 }
-
+.i-filterselect-prompt .i-filterselect-input {
+	/* input prompt active, i.e empty select */
+	color: #999;
+	font-style: italic;
+}
 .i-filterselect-button {
 	float: right;
 	width: 25px;
