new component, absolutelayout (aka coordinatelayout #1267) and simple test case
svn changeset:7374 branch:6.0

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1,5 +1,11 @@
 /* Automatically compiled css file from subdirectories. */
 
+/* ./WebContent/ITMILL/themes/default/absolutelayout/absolutelayout.css */
+.i-absolutelayout-wrapper {
+	position: absolute;
+	overflow:hidden;
+}
+
 /* ./WebContent/ITMILL/themes/default/accordion/accordion.css */
 .i-accordion {
 	position: relative;
