major refactoring and cleaning related to column width handling in scrolltable. Hardcoded margins now removed and most things ought to be possible to define with CSS. fixes #2417
svn changeset:7512 branch:6.0

--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1831,6 +1831,30 @@ input.i-modified,
 
 
 /* ./WebContent/ITMILL/themes/default/table/table.css */
+
+/* Table theme building instructions
+ * 
+ * Toolkit scroll table is very complex widget with dozens of features. These 
+ * features set some limitations for theme builder. To keep things working, it
+ * is safest to try to just override values used in default theme and comfort to
+ * these instructions.
+ * 
+ *
+ * Table cells in body:
+ *  - padding/border for cells is to be defined for td elements (class name: .i-table-cell-content)
+ *  - in default theme there are no borders, but they should work. Just set border-right or border-bottom
+ *  - no padding or border is allowed for div inside cells (class name : .i-table-cell-wrapper) element
+ *  - background is allowed for both elements
+ *
+ * Table headers:
+ *  - table cells in header contain .i-table-resizer and 
+ *	  .i-table-caption-container div elements, which are both floated to right
+ *  - to align header caption to body content resizer width + .i-table-caption-container
+ *    padding right should be equal to content cells padding-right and border-right.
+ *  - Possible cell border in header must be themed into column resizer.
+ *
+ */
+
 .i-table {
 	overflow: hidden;
 	text-align: left /* Force default alignment */
@@ -1856,14 +1880,13 @@ input.i-modified,
 
 .i-table-header table,
 .i-table-table {
-	border-collapse: collapse;
 	margin: 0;
 	padding: 0;
 	border: 0;
+	border-spacing:0;
 }
 
-.i-table-header td,
-.i-table-table td {
+.i-table-header td {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -1876,6 +1899,7 @@ input.i-modified,
 .i-table-resizer {
 	display: block;
 	height: 36px;
+	width:4px;
 	float: right;
 	background: transparent url(table/img/resizer-bg.png) repeat-y 50% 50%;
 	cursor: col-resize;
@@ -1889,6 +1913,11 @@ input.i-modified,
 	font-size: 15px;
 	padding-top: 9px;
 	text-shadow: #ffffff 2px 2px 0;
+	/* To align captions and content to same place resizer width + caption 
+	 * container padding-right must be equal to table cell 
+	 * padding-right + border-righ 
+	 */
+	padding-right:2px;
 }
 
 .i-table-header-cell-asc .i-table-caption-container {
@@ -1902,7 +1931,6 @@ input.i-modified,
 .i-table-header-cell-desc:hover {
 	background: transparent url(table/img/header-bg-over.png) repeat-x;
 }
-
 
 .i-table-body {
 	background: #fff;
@@ -1933,15 +1961,17 @@ input.i-modified,
 	background: #57a7ed;
 	color: #fff;
 }
-.i-table-row td,
-.i-table-row-odd td {
-	padding: 0;
-}
+
 .i-table-cell-content {
+	padding-top: 3px;
+	padding-left: 3px;
+	padding-right: 5px;
+	border-right:1px solid #f6f7f7;
+}
+
+.i-table-cell-wrapper {
 	white-space: nowrap;
 	overflow: hidden;
-	padding: 3px 0 3px 3px;
-	margin-right: 5px;
 	line-height: 23px;
 }
 
