--- a/WebContent/ITMILL/themes/sampler/table/styles.css
+++ b/WebContent/ITMILL/themes/sampler/table/styles.css
@@ -22,3 +22,9 @@
 	font-family: monospace;
 	margin: 0px;
 }
+
+.i-table .i-icon {
+	/* explicitly set icon width for fast browsers
+	 * to properly detect row header width */
+	width: 16px;
+}
