--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -1411,11 +1411,14 @@ div.i-tree-node-leaf {
 	padding: 0.3em 1em;
 	height: 1em;
 }
+.i-window-header {
+	font-weight: bold;
+}
+/* A more specific selector to make sure padding isn't so easily overridden */
 div.i-window-header {
 	white-space: nowrap;
 	text-overflow: ellipsis;
 	overflow: hidden;
-	font-weight: bold;
 	padding: 0;
 }
 .i-ie6 .i-window-header {
@@ -1720,6 +1723,8 @@ div.i-window-header {
 	width: 31px;
 	height: 31px;
 	background: transparent url(common/img/loading-indicator.gif);
+	margin-right: 5px;
+	margin-top: 5px;
 }
 .i-loading-indicator-delay {
 	background-image: url(common/img/loading-indicator-delay.gif);
@@ -2665,9 +2670,9 @@ div.i-window-header {
 }
 .i-table-column-selector {
 	background: transparent url(table/img/colsel.png) no-repeat;
-	margin: -36px 1px 0 0;
+	margin: -36px 0 0 0;
 	height: 36px;
-	width: 14px;
+	width: 15px;
 }
 .i-table-focus-slot-left {
 	border-color: #b6bbbc;
