--- a/WebContent/ITMILL/themes/default/common/common.css
+++ b/WebContent/ITMILL/themes/default/common/common.css
@@ -14,6 +14,8 @@
 	background-position: 50%;
 }
 /* Global font styles */
+.i-window,
+.i-popupview-popup,
 .i-app input,
 .i-app select,
 .i-app button,
